The startup script will now: ✅ Load environment variables from available sources ✅ Show environment status (without exposing sensitive values) ✅ Validate all required variables ✅ Provide clear error messages if anything is missing ✅ Start the API server successfully

--- a/.dockerignore
+++ b/.dockerignore
@@ -52,8 +52,11 @@ tests/
 *.log
 logs/
 
-# Environment files (will be set via Claw Cloud)
-.env*
+# Environment files (exclude sensitive ones, but allow templates)
+.env.local
+.env.production
+.env.development
+# Note: .env and .env.claw are included for deployment
 
 # Database files (use cloud databases)
 *.db
